--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
 							<div class="collapse navbar-collapse" id="collapsibleNavbar">
 								<ul class="navbar-nav">
 									<li class="nav-item">
-										<a class="nav-link" href="#">Home</a>
+										<a class="nav-link" href="index.html">Home</a>
 									</li>
 									<li class="nav-item">
 										<a class="nav-link" href="#">Documentation</a>
 									</li>
 									<li class="nav-item dropdown">
-										<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Blogs</a>
+										<a class="nav-link dropdown-toggle" href="blog.html" role="button" data-bs-toggle="dropdown">Blogs</a>
 										<ul class="dropdown-menu">
-										<li><a class="dropdown-item" href="#">Building</a></li>
+										<li><a class="dropdown-item" href="blog.html">Building</a></li>
 										<li><a class="dropdown-item" href="#">Tech</a></li>
 										<li><a class="dropdown-item" href="#">Travel</a></li>
 										</ul>
